<resources>
    <string name="app_name">Cutlery</string>
    <string name="cutlery_logo">Cutlery logo</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up?</string>

    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="search">search</string>
    <string name="filter">filter</string>
    <string name="cart">cart</string>
    <string name="developer_madine_com">developer.madine.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Congratulation, your table has been booked. Thank you for your trust in our restaurant.</string>
    <string name="build_version">Build Version</string>
    <string name="version_3_1_0">Version 3.1.0</string>
    <string name="developer_madine_android_com">developer.madine.android.com</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_2020">Copyright 2020</string>
    <string name="share_to_your_friends">Share to your friends</string>
    <string name="number_of_people">Number of people</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_phone_number">Your Phone Number</string>
</resources>
