<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search" />
    <item
        android:id="@+id/filter"
        android:orderInCategory="100"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always"
        android:title="@string/filter" />
    <item
        android:id="@+id/cart"
        android:orderInCategory="100"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"
        android:title="@string/cart"
        tools:ignore="AlwaysShowAction" />

</menu>
